--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>관광지 지도</title>
+    <title>카카오 지도 테스트</title>
     <style>
       html, body, #map {
         margin: 0;
@@ -15,16 +15,15 @@
   </head>
   <body>
     <div id="map"></div>
-
     <script>
       kakao.maps.load(function () {
-        var mapContainer = document.getElementById('map');
-        var mapOption = {
+        var container = document.getElementById('map');
+        var options = {
           center: new kakao.maps.LatLng(33.3617, 126.5292),
           level: 9
         };
 
-        var map = new kakao.maps.Map(mapContainer, mapOption);
+        var map = new kakao.maps.Map(container, options);
 
         var places = [
           { name: '성산일출봉', lat: 33.4589, lng: 126.9420 },
