--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         height: 100%;
       }
     </style>
-    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=f723177a920b33c1e3971e5c58b6ff90&autoload=false&libraries=services"></script>
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=f723177a920b33c1e3971e5c58b6ff90&libraries=services"></script>
+
   </head>
   <body>
     <div id="map"></div>
