--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+final rawHtml = '''
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>카카오 지도 테스트</title>
+    <title>지도</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       html, body, #map {
         margin: 0;
@@ -11,41 +13,26 @@
         height: 100%;
       }
     </style>
-    <!-- autoload=false 제거 -->
-    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=f723177a920b33c1e3971e5c58b6ff90&libraries=services"></script>
+    <!-- ✅ defer 추가로 비동기 로드 보장 -->
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=YOUR_KAKAO_KEY&autoload=false"></script>
   </head>
   <body>
     <div id="map"></div>
     <script>
-      const container = document.getElementById('map');
-      const options = {
-        center: new kakao.maps.LatLng(33.3617, 126.5292),
-        level: 9,
-      };
-
-      const map = new kakao.maps.Map(container, options);
-
-      const places = [
-        { name: '성산일출봉', lat: 33.4589, lng: 126.9420 },
-        { name: '한라산 국립공원', lat: 33.3625, lng: 126.5336 },
-        { name: '협재 해수욕장', lat: 33.3920, lng: 126.2397 },
-      ];
-
-      places.forEach(place => {
-        const marker = new kakao.maps.Marker({
-          map,
-          position: new kakao.maps.LatLng(place.lat, place.lng),
-          title: place.name
-        });
-
-        const infowindow = new kakao.maps.InfoWindow({
-          content: `<div style="padding:5px;font-size:13px;">${place.name}</div>`
-        });
-
-        kakao.maps.event.addListener(marker, 'click', () => {
-          infowindow.open(map, marker);
-        });
+      kakao.maps.load(function() {
+        var mapContainer = document.getElementById('map');
+        var options = {
+          center: new kakao.maps.LatLng(LAT_PLACEHOLDER, LON_PLACEHOLDER),
+          level: 7
+        };
+        var map = new kakao.maps.Map(mapContainer, options);
       });
     </script>
   </body>
 </html>
+''';
+
+final html = rawHtml
+  .replaceAll('YOUR_KAKAO_KEY', 'f723177a920b33c1e3971e5c58b6ff90')
+  .replaceAll('LAT_PLACEHOLDER', lat.toString())
+  .replaceAll('LON_PLACEHOLDER', lon.toString());
