--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ final rawHtml = '''
       }
     </style>
     <!-- ✅ defer 추가로 비동기 로드 보장 -->
-    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=YOUR_KAKAO_KEY&autoload=false"></script>
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=f723177a920b33c1e3971e5c58b6ff90"></script>
   </head>
   <body>
     <div id="map"></div>
