--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-final rawHtml = '''
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>지도</title>
+    <meta charset="utf-8">
+    <title>카카오 지도</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       html, body, #map {
@@ -13,26 +12,17 @@ final rawHtml = '''
         height: 100%;
       }
     </style>
-    <!-- ✅ defer 추가로 비동기 로드 보장 -->
     <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=f723177a920b33c1e3971e5c58b6ff90&autoload=false"></script>
   </head>
   <body>
     <div id="map"></div>
     <script>
-      kakao.maps.load(function() {
-        var mapContainer = document.getElementById('map');
-        var options = {
-          center: new kakao.maps.LatLng(LAT_PLACEHOLDER, LON_PLACEHOLDER),
-          level: 7
-        };
-        var map = new kakao.maps.Map(mapContainer, options);
+      kakao.maps.load(function () {
+        var map = new kakao.maps.Map(document.getElementById('map'), {
+          center: new kakao.maps.LatLng(37.5665, 126.9780),
+          level: 3
+        });
       });
     </script>
   </body>
 </html>
-''';
-
-final html = rawHtml
-  .replaceAll('YOUR_KAKAO_KEY', 'f723177a920b33c1e3971e5c58b6ff90')
-  .replaceAll('LAT_PLACEHOLDER', lat.toString())
-  .replaceAll('LON_PLACEHOLDER', lon.toString());
