--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div id="map"></div>
     <script>
       let map;
+      let currentMarkers = [];
 
       kakao.maps.load(function () {
         const container = document.getElementById('map');
@@ -26,11 +27,8 @@
           level: 7,
         };
         map = new kakao.maps.Map(container, options);
-
-        window.flutterMapReady = true; // Flutter에서 맵 준비 확인
+        window.flutterMapReady = true;
       });
-
-      let currentMarkers = [];
 
       function clearMarkers() {
         currentMarkers.forEach(marker => marker.setMap(null));
@@ -40,19 +38,20 @@
       function renderMarkers(data, category) {
         clearMarkers();
 
-        const markerImageUrl =
-          category === '관광지'
-            ? 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_red.png'
-            : 'https://wonjin0930.github.io/mbtitrip/image/restaurant.png';
+        const markerImageUrl = category === '관광지'
+          ? 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_red.png'
+          : 'https://wonjin0930.github.io/mbtitrip/image/restaurant.png';
 
         const markerSize = new kakao.maps.Size(40, 40);
 
-        data.forEach(item => {
+        data.forEach((item, index) => {
           if (!item.lat || !item.lon) return;
+
+          const position = new kakao.maps.LatLng(item.lat, item.lon);
 
           const marker = new kakao.maps.Marker({
             map: map,
-            position: new kakao.maps.LatLng(item.lat, item.lon),
+            position,
             title: item.name,
             image: new kakao.maps.MarkerImage(markerImageUrl, markerSize),
           });
@@ -63,6 +62,12 @@
 
           kakao.maps.event.addListener(marker, 'mouseover', () => infowindow.open(map, marker));
           kakao.maps.event.addListener(marker, 'mouseout', () => infowindow.close());
+          kakao.maps.event.addListener(marker, 'click', () => {
+            infowindow.open(map, marker);
+            if (window.markerClicked) {
+              markerClicked.postMessage(index.toString());
+            }
+          });
 
           currentMarkers.push(marker);
         });
@@ -77,6 +82,16 @@
         };
         if (coords[region]) {
           map.setCenter(coords[region]);
+        }
+      }
+
+      function focusMarkerAt(index) {
+        const marker = currentMarkers[index];
+        if (marker) {
+          map.setCenter(marker.getPosition());
+          new kakao.maps.InfoWindow({
+            content: `<div style="padding:6px 12px;font-size:14px;">${marker.getTitle()}</div>`,
+          }).open(map, marker);
         }
       }
     </script>
