--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
           });
 
           const infowindow = new kakao.maps.InfoWindow({
-            content: `<div style="padding:6px 12px;font-size:14px;">${item.name}</div>`,
+            content: `<div style="padding:6px 12px;font-size:14px;">${item.name}</div>`
           });
 
           kakao.maps.event.addListener(marker, 'mouseover', () => infowindow.open(map, marker));
           kakao.maps.event.addListener(marker, 'mouseout', () => infowindow.close());
           kakao.maps.event.addListener(marker, 'click', () => {
             infowindow.open(map, marker);
-            if (window.markerClicked) {
-              markerClicked.postMessage(index.toString());
+            if (window.markerClicked && window.markerClicked.postMessage) {
+              window.markerClicked.postMessage(index.toString());
             }
           });
 
@@ -90,7 +90,7 @@
         if (marker) {
           map.setCenter(marker.getPosition());
           new kakao.maps.InfoWindow({
-            content: `<div style="padding:6px 12px;font-size:14px;">${marker.getTitle()}</div>`,
+            content: `<div style="padding:6px 12px;font-size:14px;">${marker.getTitle()}</div>`
           }).open(map, marker);
         }
       }
