--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script>
       let map;
       let currentMarkers = [];
-      let activeInfoWindow = null; // ✅ 현재 열린 InfoWindow
+      let activeInfoWindow = null;
 
       kakao.maps.load(function () {
         const container = document.getElementById('map');
@@ -34,7 +34,7 @@
       function clearMarkers() {
         currentMarkers.forEach(marker => marker.setMap(null));
         currentMarkers = [];
-        activeInfoWindow = null; // 초기화 시 InfoWindow도 닫기
+        activeInfoWindow = null;
       }
 
       function renderMarkers(data, category) {
@@ -66,14 +66,13 @@
           kakao.maps.event.addListener(marker, 'mouseout', () => infowindow.close());
 
           kakao.maps.event.addListener(marker, 'click', () => {
-            // ✅ 기존 InfoWindow 닫기
             if (activeInfoWindow) activeInfoWindow.close();
-
             infowindow.open(map, marker);
             activeInfoWindow = infowindow;
 
             if (window.markerClicked && window.markerClicked.postMessage) {
-              window.markerClicked.postMessage(index.toString());
+              const payload = JSON.stringify({ index, name: item.name });
+              window.markerClicked.postMessage(payload);
             }
           });
 
@@ -97,10 +96,7 @@
         const marker = currentMarkers[index];
         if (marker) {
           map.setCenter(marker.getPosition());
-
-          // ✅ 기존 창 닫기
           if (activeInfoWindow) activeInfoWindow.close();
-
           const infowindow = new kakao.maps.InfoWindow({
             content: `<div style="padding:6px 12px;font-size:14px;">${marker.getTitle()}</div>`
           });
