--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
             content: `<div style="padding:6px 12px;font-size:14px;">${item.name}</div>`
           });
 
+          infowindow.open(map, marker);
+
           kakao.maps.event.addListener(marker, 'mouseover', () => infowindow.open(map, marker));
           kakao.maps.event.addListener(marker, 'mouseout', () => infowindow.close());
 
