--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           });
 
           const infowindow = new kakao.maps.InfoWindow({
-            content: `<div style="padding:6px 12px;font-size:14px;">${item.name}</div>`
+            content: `<div style="padding:6px 12px;font-size:14px;white-space:nowrap">${item.name}</div>`
           });
 
           marker.infowindow = infowindow;
