--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
       });
 
       function clearMarkers() {
-        currentMarkers.forEach(marker => {
-          if (marker.infowindow) marker.infowindow.close();
-          marker.setMap(null);
-        });
+        currentMarkers.forEach(marker => marker.setMap(null));
         currentMarkers = [];
         activeInfoWindow = null;
       }
@@ -63,15 +60,14 @@
           });
 
           const infowindow = new kakao.maps.InfoWindow({
-            content: `<div style="padding:6px 12px;font-size:14px;white-space:nowrap">${item.name}</div>`
+            content: `<div style="padding:6px 12px;font-size:14px;">${item.name}</div>`
           });
 
-          marker.infowindow = infowindow;
+          kakao.maps.event.addListener(marker, 'mouseover', () => infowindow.open(map, marker));
+          kakao.maps.event.addListener(marker, 'mouseout', () => infowindow.close());
 
           kakao.maps.event.addListener(marker, 'click', () => {
-            currentMarkers.forEach(m => {
-              if (m.infowindow) m.infowindow.close();
-            });
+            if (activeInfoWindow) activeInfoWindow.close();
             infowindow.open(map, marker);
             activeInfoWindow = infowindow;
 
@@ -96,33 +92,21 @@
         }
       }
 
-      function focusMarkerAt(index) {
-        const marker = currentMarkers[index];
-        if (marker) {
-          map.setCenter(marker.getPosition());
-          currentMarkers.forEach(m => {
-            if (m.infowindow) m.infowindow.close();
-          });
-          if (marker.infowindow) {
-            marker.infowindow.open(map, marker);
-            activeInfoWindow = marker.infowindow;
-          }
-        }
-      }
+      function focusMarkerAtLatLng(name, lat, lon) {
+        if (activeInfoWindow) activeInfoWindow.close();
 
-      function moveToLocation(lat, lon) {
-        const latLng = new kakao.maps.LatLng(lat, lon);
-        map.setCenter(latLng);
-        currentMarkers.forEach(m => {
-          if (m.getPosition().getLat() === lat && m.getPosition().getLng() === lon) {
-            if (m.infowindow) {
-              m.infowindow.open(map, m);
-              activeInfoWindow = m.infowindow;
-            }
-          } else {
-            if (m.infowindow) m.infowindow.close();
-          }
-        });
+        const matchedMarker = currentMarkers.find(m => m.getTitle() === name);
+        if (matchedMarker) {
+          const infowindow = new kakao.maps.InfoWindow({
+            content: `<div style="padding:6px 12px;font-size:14px;">${name}</div>`
+          });
+          infowindow.open(map, matchedMarker);
+          activeInfoWindow = infowindow;
+          map.setCenter(matchedMarker.getPosition());
+        } else {
+          const position = new kakao.maps.LatLng(lat, lon);
+          map.setCenter(position);
+        }
       }
     </script>
   </body>
