--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         const markerSize = new kakao.maps.Size(40, 40);
 
-        data.forEach((item, index) => {
+        data.forEach((item) => {
           if (!item.lat || !item.lon) return;
 
           const position = new kakao.maps.LatLng(item.lat, item.lon);
@@ -93,20 +93,28 @@
       }
 
       function focusMarkerAtLatLng(name, lat, lon) {
-        if (activeInfoWindow) activeInfoWindow.close();
+        // 기존 마커 다 제거
+        clearMarkers();
 
-        const matchedMarker = currentMarkers.find(m => m.getTitle() === name);
-        if (matchedMarker) {
-          const infowindow = new kakao.maps.InfoWindow({
-            content: `<div style="padding:6px 12px;font-size:14px;">${name}</div>`
-          });
-          infowindow.open(map, matchedMarker);
-          activeInfoWindow = infowindow;
-          map.setCenter(matchedMarker.getPosition());
-        } else {
-          const position = new kakao.maps.LatLng(lat, lon);
-          map.setCenter(position);
-        }
+        const markerImageUrl = 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_red.png';
+        const markerSize = new kakao.maps.Size(40, 40);
+        const position = new kakao.maps.LatLng(lat, lon);
+
+        const marker = new kakao.maps.Marker({
+          map: map,
+          position: position,
+          title: name,
+          image: new kakao.maps.MarkerImage(markerImageUrl, markerSize),
+        });
+
+        const infowindow = new kakao.maps.InfoWindow({
+          content: `<div style="padding:6px 12px;font-size:14px;">${name}</div>`
+        });
+
+        infowindow.open(map, marker);
+        activeInfoWindow = infowindow;
+        currentMarkers.push(marker);
+        map.setCenter(position);
       }
     </script>
   </body>
