--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         height: 100%;
       }
     </style>
-    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=여기에_본인_API_KEY입력&autoload=false"></script>
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=f723177a920b33c1e3971e5c58b6ff90&autoload=false"></script>
   </head>
   <body>
     <div id="map"></div>
