--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
           if (!item.lat || !item.lon) return;
 
           const position = new kakao.maps.LatLng(item.lat, item.lon);
+
           const marker = new kakao.maps.Marker({
             map: map,
             position,
-            title: item.name,
+            title: item.name, // ✅ 마커에 name 저장
             image: new kakao.maps.MarkerImage(markerImageUrl, markerSize),
           });
 
@@ -69,6 +70,7 @@
             if (activeInfoWindow) activeInfoWindow.close();
             infowindow.open(map, marker);
             activeInfoWindow = infowindow;
+
             if (window.markerClicked && window.markerClicked.postMessage) {
               window.markerClicked.postMessage(JSON.stringify({ name: item.name }));
             }
@@ -94,6 +96,7 @@
         if (activeInfoWindow) activeInfoWindow.close();
 
         const matchedMarker = currentMarkers.find(m => m.getTitle() === name);
+
         if (matchedMarker) {
           const infowindow = new kakao.maps.InfoWindow({
             content: `<div style="padding:6px 12px;font-size:14px;">${name}</div>`
