--- a/index.html
+++ b/index.html
@@ -1,116 +1,103 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>카카오 지도</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      html, body, #map {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-      }
-    </style>
-    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=f723177a920b33c1e3971e5c58b6ff90&autoload=false"></script>
-  </head>
-  <body>
-    <div id="map"></div>
-    <script>
-      let map;
-      let currentMarkers = [];
-      let activeInfoWindow = null;
+<head>
+  <meta charset="utf-8" />
+  <title>카카오 지도</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    html, body, #map { margin: 0; padding: 0; width: 100%; height: 100%; }
+  </style>
+  <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=YOUR_APP_KEY&autoload=false"></script>
+</head>
+<body>
+<div id="map"></div>
+<script>
+  let map;
+  let currentMarkers = [];
+  let activeInfoWindow = null;
 
-      kakao.maps.load(function () {
-        const container = document.getElementById('map');
-        const options = {
-          center: new kakao.maps.LatLng(37.5665, 126.9780),
-          level: 7,
-        };
-        map = new kakao.maps.Map(container, options);
+  kakao.maps.load(function () {
+    map = new kakao.maps.Map(document.getElementById('map'), {
+      center: new kakao.maps.LatLng(37.5665, 126.9780),
+      level: 7,
+    });
+    console.log("[KakaoMap] Map loaded");
+    window.flutterMapReady = true;
+  });
 
-        // ✅ Flutter에 지도 준비 완료 신호를 보내는 log (디버깅 용)
-        console.log("[KakaoMap] Map loaded");
-        window.flutterMapReady = true;
+  function clearMarkers() {
+    currentMarkers.forEach(marker => marker.setMap(null));
+    currentMarkers = [];
+    activeInfoWindow = null;
+  }
+
+  function renderMarkers(data, category) {
+    clearMarkers();
+    const markerImageUrl = category === '관광지'
+      ? 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_red.png'
+      : 'https://wonjin0930.github.io/mbtitrip/image/restaurant.png';
+
+    const markerSize = new kakao.maps.Size(40, 40);
+
+    data.forEach(item => {
+      if (!item.lat || !item.lon) return;
+
+      const position = new kakao.maps.LatLng(item.lat, item.lon);
+      const marker = new kakao.maps.Marker({
+        map: map,
+        position,
+        title: item.name,
+        image: new kakao.maps.MarkerImage(markerImageUrl, markerSize),
       });
 
-      function clearMarkers() {
-        currentMarkers.forEach(marker => marker.setMap(null));
-        currentMarkers = [];
-        activeInfoWindow = null;
-      }
+      const infowindow = new kakao.maps.InfoWindow({
+        content: `<div style="padding:6px 12px;font-size:14px;">${item.name}</div>`
+      });
 
-      function renderMarkers(data, category) {
-        clearMarkers();
+      kakao.maps.event.addListener(marker, 'mouseover', () => infowindow.open(map, marker));
+      kakao.maps.event.addListener(marker, 'mouseout', () => infowindow.close());
 
-        const markerImageUrl =
-          category === '관광지'
-            ? 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_red.png'
-            : 'https://wonjin0930.github.io/mbtitrip/image/restaurant.png';
-
-        const markerSize = new kakao.maps.Size(40, 40);
-
-        data.forEach((item) => {
-          if (!item.lat || !item.lon) return;
-
-          const position = new kakao.maps.LatLng(item.lat, item.lon);
-
-          const marker = new kakao.maps.Marker({
-            map: map,
-            position,
-            title: item.name,
-            image: new kakao.maps.MarkerImage(markerImageUrl, markerSize),
-          });
-
-          const infowindow = new kakao.maps.InfoWindow({
-            content: `<div style="padding:6px 12px;font-size:14px;">${item.name}</div>`
-          });
-
-          kakao.maps.event.addListener(marker, 'mouseover', () => infowindow.open(map, marker));
-          kakao.maps.event.addListener(marker, 'mouseout', () => infowindow.close());
-
-          kakao.maps.event.addListener(marker, 'click', () => {
-            if (activeInfoWindow) activeInfoWindow.close();
-            infowindow.open(map, marker);
-            activeInfoWindow = infowindow;
-
-            if (window.markerClicked && window.markerClicked.postMessage) {
-              window.markerClicked.postMessage(JSON.stringify({ name: item.name }));
-            }
-          });
-
-          currentMarkers.push(marker);
-        });
-      }
-
-      function moveToRegion(region) {
-        const coords = {
-          '경주': new kakao.maps.LatLng(35.8562, 129.2247),
-          '제주': new kakao.maps.LatLng(33.4996, 126.5312),
-          '부산': new kakao.maps.LatLng(35.1796, 129.0756),
-          '평창': new kakao.maps.LatLng(37.3704, 128.3899),
-        };
-        if (coords[region]) {
-          map.setCenter(coords[region]);
-        }
-      }
-
-      function focusMarkerAtLatLng(name, lat, lon) {
+      kakao.maps.event.addListener(marker, 'click', () => {
         if (activeInfoWindow) activeInfoWindow.close();
+        infowindow.open(map, marker);
+        activeInfoWindow = infowindow;
 
-        const matchedMarker = currentMarkers.find(m => m.getTitle() === name);
-        if (matchedMarker) {
-          const infowindow = new kakao.maps.InfoWindow({
-            content: `<div style="padding:6px 12px;font-size:14px;">${name}</div>`
-          });
-          infowindow.open(map, matchedMarker);
-          activeInfoWindow = infowindow;
-          map.setCenter(matchedMarker.getPosition());
-        } else {
-          const position = new kakao.maps.LatLng(lat, lon);
-          map.setCenter(position);
+        if (window.markerClicked && window.markerClicked.postMessage) {
+          window.markerClicked.postMessage(JSON.stringify({ name: item.name }));
         }
-      }
-    </script>
-  </body>
+      });
+
+      currentMarkers.push(marker);
+    });
+  }
+
+  function moveToRegion(region) {
+    const coords = {
+      '경주': new kakao.maps.LatLng(35.8562, 129.2247),
+      '제주': new kakao.maps.LatLng(33.4996, 126.5312),
+      '부산': new kakao.maps.LatLng(35.1796, 129.0756),
+      '평창': new kakao.maps.LatLng(37.3704, 128.3899),
+    };
+    if (coords[region]) {
+      map.setCenter(coords[region]);
+    }
+  }
+
+  function focusMarkerAtLatLng(name, lat, lon) {
+    if (activeInfoWindow) activeInfoWindow.close();
+
+    const matchedMarker = currentMarkers.find(m => m.getTitle() === name);
+    if (matchedMarker) {
+      const infowindow = new kakao.maps.InfoWindow({
+        content: `<div style="padding:6px 12px;font-size:14px;">${name}</div>`
+      });
+      infowindow.open(map, matchedMarker);
+      activeInfoWindow = infowindow;
+      map.setCenter(matchedMarker.getPosition());
+    } else {
+      map.setCenter(new kakao.maps.LatLng(lat, lon));
+    }
+  }
+</script>
+</body>
 </html>
