--- a/index.html
+++ b/index.html
@@ -16,34 +16,31 @@
   let currentMarkers = [];
   let activeInfoWindow = null;
 
-  // 카카오 맵 로딩 후 지도 초기화
   kakao.maps.load(function () {
     map = new kakao.maps.Map(document.getElementById('map'), {
       center: new kakao.maps.LatLng(37.5665, 126.9780), // 서울 중심
-      level: 7,  // 지도 확대 레벨
+      level: 7,
     });
     console.log("[KakaoMap] Map loaded");
-    window.flutterMapReady = true;  // Flutter로 지도 로드 완료 알림
+    window.flutterMapReady = true;
   });
 
-  // 마커 초기화 및 제거
   function clearMarkers() {
     currentMarkers.forEach(marker => marker.setMap(null));
     currentMarkers = [];
     activeInfoWindow = null;
   }
 
-  // 마커 렌더링 함수
   function renderMarkers(data, category) {
     clearMarkers();
     const markerImageUrl = category === '관광지'
       ? 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_red.png'
       : 'https://wonjin0930.github.io/mbtitrip/image/restaurant.png';
 
-    const markerSize = new kakao.maps.Size(40, 40);  // 마커 크기 설정
+    const markerSize = new kakao.maps.Size(40, 40);
 
     data.forEach(item => {
-      if (!item.lat || !item.lon) return;  // 위도와 경도가 없는 데이터는 무시
+      if (!item.lat || !item.lon) return;
 
       const position = new kakao.maps.LatLng(item.lat, item.lon);
       const marker = new kakao.maps.Marker({
@@ -54,29 +51,26 @@
       });
 
       const infowindow = new kakao.maps.InfoWindow({
-        content: `<div style="padding:6px 12px;font-size:14px;">${item.name}</div>`  // 마커 정보 창
+        content: `<div style="padding:6px 12px;font-size:14px;">${item.name}</div>`
       });
 
-      // 마커에 마우스오버 이벤트 추가
       kakao.maps.event.addListener(marker, 'mouseover', () => infowindow.open(map, marker));
       kakao.maps.event.addListener(marker, 'mouseout', () => infowindow.close());
 
-      // 마커 클릭 시, 세부 정보 Flutter로 전달
       kakao.maps.event.addListener(marker, 'click', () => {
-        if (activeInfoWindow) activeInfoWindow.close();  // 기존 열린 InfoWindow 닫기
+        if (activeInfoWindow) activeInfoWindow.close();
         infowindow.open(map, marker);
         activeInfoWindow = infowindow;
 
         if (window.markerClicked && window.markerClicked.postMessage) {
-          // 마커 정보를 Flutter로 전달
-          window.markerClicked.postMessage(JSON.stringify({ 
+          window.markerClicked.postMessage(JSON.stringify({
             name: item.name,
             lat: item.lat,
             lon: item.lon,
             img: item.img || '',
             address: item.address || '',
             desc: item.desc || '',
-            overview: item.overview || ''  // 상세 설명 추가
+            overview: item.overview || ''
           }));
         }
       });
@@ -85,7 +79,6 @@
     });
   }
 
-  // 지역별 지도 이동 함수
   function moveToRegion(region) {
     const coords = {
       '경주': new kakao.maps.LatLng(35.8562, 129.2247),
@@ -94,11 +87,11 @@
       '평창': new kakao.maps.LatLng(37.3704, 128.3899),
     };
     if (coords[region]) {
-      map.setCenter(coords[region]);  // 해당 지역으로 지도 중심 이동
+      map.setCenter(coords[region]);
+      map.setLevel(7); // 초기 줌도 설정
     }
   }
 
-  // 마커 위치로 이동 및 선택된 마커에 초점 맞추기
   function focusMarkerAtLatLng(name, lat, lon) {
     if (activeInfoWindow) activeInfoWindow.close();
 
@@ -109,17 +102,23 @@
       });
       infowindow.open(map, matchedMarker);
       activeInfoWindow = infowindow;
-      map.setCenter(matchedMarker.getPosition());  // 마커로 지도 이동
+      map.setCenter(matchedMarker.getPosition());
+      map.setLevel(4); // ✅ 줌인해서 마커 잘 보이게
     } else {
-      map.setCenter(new kakao.maps.LatLng(lat, lon));  // 마커가 없으면 직접 좌표로 이동
+      map.setCenter(new kakao.maps.LatLng(lat, lon));
+      map.setLevel(4); // ✅ 직접 좌표 이동도 줌인 적용
     }
   }
 
-  // `moveToLocation` 함수가 호출될 때 `focusMarkerAtLatLng` 호출하도록 변경
   window.moveToLocation = function(name, lat, lon) {
+    if (typeof lat === 'string') lat = parseFloat(lat);
+    if (typeof lon === 'string') lon = parseFloat(lon);
+    if (isNaN(lat) || isNaN(lon)) {
+      console.error('Invalid coordinates:', lat, lon);
+      return;
+    }
     focusMarkerAtLatLng(name, lat, lon);
   }
 </script>
-
 </body>
 </html>
