--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   kakao.maps.load(function () {
     map = new kakao.maps.Map(document.getElementById('map'), {
-      center: new kakao.maps.LatLng(37.5665, 126.9780), // 서울 중심
+      center: new kakao.maps.LatLng(37.5665, 126.9780),
       level: 7,
     });
     console.log("[KakaoMap] Map loaded");
@@ -88,14 +88,21 @@
     };
     if (coords[region]) {
       map.setCenter(coords[region]);
-      map.setLevel(7); // 초기 줌도 설정
+      map.setLevel(7);
     }
   }
 
   function focusMarkerAtLatLng(name, lat, lon) {
     if (activeInfoWindow) activeInfoWindow.close();
 
-    const matchedMarker = currentMarkers.find(m => m.getTitle() === name);
+    // 🔧 정규화 함수: 공백 제거 + 소문자화
+    function normalize(text) {
+      return (text || '').toString().replace(/\s+/g, '').toLowerCase();
+    }
+
+    const target = normalize(name);
+    const matchedMarker = currentMarkers.find(m => normalize(m.getTitle()) === target);
+
     if (matchedMarker) {
       const infowindow = new kakao.maps.InfoWindow({
         content: `<div style="padding:6px 12px;font-size:14px;">${name}</div>`
@@ -103,13 +110,14 @@
       infowindow.open(map, matchedMarker);
       activeInfoWindow = infowindow;
       map.setCenter(matchedMarker.getPosition());
-      map.setLevel(4); // ✅ 줌인해서 마커 잘 보이게
+      map.setLevel(4);
     } else {
       map.setCenter(new kakao.maps.LatLng(lat, lon));
-      map.setLevel(4); // ✅ 직접 좌표 이동도 줌인 적용
+      map.setLevel(4);
     }
   }
 
+  // ✅ Flutter가 호출하는 함수
   window.moveToLocation = function(name, lat, lon) {
     if (typeof lat === 'string') lat = parseFloat(lat);
     if (typeof lon === 'string') lon = parseFloat(lon);
